              only happens if you ask for ALG_TREEWIDTH and your value
              of r is so large that it cannot fit into a native C++ int.
            - New routines minimiseVertices() and hasMinimalVertices().
            - New routine hasMimimalBoundary().
            - Routine minimiseBoundary() now throws an exception if the
              triangulation is not valid.
        Class Triangulation<4>:
            - New routine intersectionForm().
            - New optimisations that reduce the need for 3-sphere/3-ball
              recognition when modifying a triangulation.
        Class Vector:
            - Routine scaleDown() now returns the gcd that was used.
        Class Vertex<3>:
            - New routine linkingSurface().
        Function for_constexpr():
            - New routine to support compile-time for loops.
        Functions gcd(), lcm():
            - Deprecated in favour of the new C++17 std::gcd() and std::lcm().
        Functions select_constexpr(), select_constexpr_as_variant():
            - New routine to support compile-time selection (similar to a
              compile-time switch statement).
        Function tightDecoding():
            - New template function that reconstructs integers and booleans
              from tight encodings.
        Functions tightEncode(), tightEncoding():
            - Added a global function to encode booleans.
        Global constants maxSafeFactor<...> and minSafeFactor<...>:
            - Added to facilitate overflow checking with native integer
              operations.
    PYTHON:
        - For classes that have a bool() cast operator, this is now wrapped in
          Python using the special __bool__() function (i.e., Python will now
          cast such objects to bool in the same way).
    UTILITIES:
        tricensus:
            - Now supports multithreading via the new --threads option.
            - Now supports additional text-based output formats via the new