@@ -55,7 +55,7 @@ using regina::StrandRef;
 
 // Isomorphism signatures for various knot/link complements that regina's
 // simplification heuristics are found to reduce to in practice.
-#define TREFOIL_SIGS { "cPcbbbadh", "cPcbbbadu", "dLQbcbcdlcj", "dLQbcbcdlcn", "dLQabccbrwj", "eLAkbbcddainqv" }
+#define TREFOIL_SIGS { "cPcbbbadh", "cPcbbbadu", "dLQbcbcdlcj", "dLQbcbcdlcn", "dLQabccbrwj", "dLQabccbrwn", "eLAkbbcddainqv" }
 #define FIG8_SIGS { "cPcbbbiht" }
 
 class LinkTest : public CppUnit::TestFixture, public TightEncodingTest<Link> {
